--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,7 +9,10 @@
     <title>Ray marching experiment</title>
 </head>
 <body>
-  <canvas id="c"></canvas>
+  <main>
+    <canvas id="c"></canvas>
+  </main>
+
   <!-- 
   <nav>
     <section class="radio">
