--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -28,8 +28,7 @@ main {
   background-color: #E0E0E0;
   padding: .75rem;
   border-radius: 10px;
-  box-shadow: 5px 8px 15px hsla(0, 0, 0, 0.2), 
-  2px 3px 4px  hsla(0, 0, 0, 0.15);
+  box-shadow: 5px 8px 15px hsla(0deg, 0%, 0%, 20%), 2px 3px 4px  hsla(0deg, 0%, 0%, 15%);
 }
 
 canvas#c {
