--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -35,10 +35,11 @@ canvas#c {
   z-index: 1;
   width: 100vw;
   height: 100vh;
-  max-width: 500px;
-  max-height: 500px;
+  max-width: 700px;
+  max-height: 700px;
 
   @include mobile {
     max-height: inherit;
+    max-width: inherit;
   }
 }
