--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,4 +1,4 @@
-@use './navbar.scss';
+@use './sidebar.scss';
 @use './mixins.scss' as *;
 
 * {
@@ -22,6 +22,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  @include tablet-lg {
+    flex-direction: column-reverse;
+  }
 }
 
 main {
