--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,71 +13,28 @@
     <canvas id="c"></canvas>
   </main>
 
-  <!-- 
-  <nav>
-    <section class="radio">
-      <p>Render type</p>
-      <div>
-        <input type="radio" value="velocity" id="velocity" name="renderType">
-        <label for="velocity">Velocity</label>
-      </div>
-      <div>
-        <input type="radio" value="none" id="none" name="renderType">
-        <label for="none">Normal</label>
-      </div>
-    </section>
-
-    <section class="radio">
-      <p>Post processing effect</p>
-      <div>
-        <input type="radio" value="pixelize" id="pixelize" name="renderType">
-        <label for="pixelize">Pixelize</label>
-      </div>
-      <div>
-        <input type="radio" value="grid" id="grid" name="renderType">
-        <label for="grid">Grid flow</label>
-      </div>
-      <div>
-        <input type="radio" value="square" id="square" name="renderType">
-        <label for="square">Square flow</label>
-      </div>
-      <div>
-        <input type="radio" value="blur" id="blur" name="renderType" checked>
-        <label for="blur">Reflections</label>
-      </div>
-    </section>
-
-    <section class="radio">
-      <p>Quality</p>
-      <div>
-        <input type="radio" value="high" id="high" name="quality">
-        <label for="high">High</label>
-      </div>
-      <div>
-        <input type="radio" value="medium" id="medium" name="quality" checked>
-        <label for="medium">Medium</label>
-      </div>
-      <div>
-        <input type="radio" value="low" id="low" name="quality">
-        <label for="low">Low</label>
-      </div>
-    </section>
-
-    <section class="links">
-      <a href="https://github.com/rhidra/" target="_blank">
-        <img src="https://img.icons8.com/material-outlined/24/ffffff/github.png"/>&nbsp;
-        Github
-      </a>
-      <a href="https://rhidra.github.io/" target="_blank">
-        <img src="https://img.icons8.com/ios-glyphs/30/ffffff/fire-element--v1.png" width="24px" alt="Flame icon"/>&nbsp;
-        More projects
-      </a>
-    </section>
-
-    <button id="close">✕</button>
-
-  </nav>
-  <button id="open">☰</button>
-  -->
+  <section class="instructions">
+    <div class="warning">
+      This app looks better on a desktop. It is not compatible with touch screens.
+    </div>
+    <div>
+      <span class="key">Z</span> Forward<br/>
+    </div>
+    <div>
+      <span class="key">S</span> Backward<br/>
+    </div>
+    <div>
+      <span class="key">Q</span> Left<br/>
+    </div>
+    <div>
+      <span class="key">D</span> Right<br/>
+    </div>
+    <div>
+      <span class="key">A</span> Down<br/>
+    </div>
+    <div>
+      <span class="key">E</span> Up<br/>
+    </div>
+  </section>
 </body>
 </html>
