--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,6 +7,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     
     <title>Ray marching experiment</title>
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WXT2N1B02R"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-WXT2N1B02R');
+    </script>
 </head>
 <body>
   <main>
