--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,6 +8,27 @@
     
     <title>Ray marching experiment</title>
 
+    <!-- SEO -->
+    <meta name="author" content="Rémy Hidra"/>
+    <meta name="description" content="A small raymarching simulation software, built with WebGL and vanilla JS. Check-out my other Web projects !"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="https://remyhidra.dev/apple-touch-icon.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="https://remyhidra.dev/favicon-32x32.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="https://remyhidra.dev/favicon-16x16.png"/>
+    <link rel="manifest" href="https://remyhidra.dev/site.webmanifest"/>
+
+    <!-- Social Sharing -->
+    <meta property="og:title" content="Ray Marching Experiment"/>
+    <meta property="og:site_name" content="Ray Marching Experiment"/>
+    <meta property="og:description" content="A small ray marching simulation software, to procedurally generate a 3D environment, built with WebGL and vanilla JS."/>
+    <meta property="og:image" content="https://remyhidra.dev/banner.png"/>
+    <meta property="og:url" content="https://raymarching.remyhidra.dev"/>
+    <meta property="og:type" content="website"/> 
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:site" content="rehidra"/>
+
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WXT2N1B02R"></script>
     <script>
